--- a/01-blank-project/package.json
+++ b/01-blank-project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "khanonjs-blank-project",
+  "name": "khanonjs-01-blank-project",
   "version": "0.0.1",
   "description": "Khanon.js blank project",
   "main": "index.html",
@@ -17,11 +17,12 @@
     "rimraf": "^3.0.2",
     "ts-loader": "^9.1.2",
     "typescript": "^5.3.3",
-    "webpack": "^5.94.0"
+    "webpack": "^5.94.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   },
   "dependencies": {
     "@babylonjs/core": "~7.2.1",
-    "@babylonjs/gui": "~7.2.1",
     "@khanonjs/engine": "^0.0.66"
   }
 }
