--- a/03-adding-2d-sprites/tsconfig.json
+++ b/03-adding-2d-sprites/tsconfig.json
@@ -1,26 +1,6 @@
 {
-    "compilerOptions": {
-        "moduleResolution": "node",
-        "module": "ES2020",
-        "target": "es2021",
-        "lib": [
-          "dom",
-          "es6"
-        ],
-        "strictFunctionTypes": true,
-        "strict": true,
-        "strictPropertyInitialization": false,
-        "strictNullChecks": false,
-        "experimentalDecorators": true,
-        "sourceMap": true,
-        "preserveConstEnums":true,
-        "esModuleInterop": true,
-        "noUnusedLocals": false
-    },
-    "include": [
-      "src/**/*"
-    ],
-    "types": [
-        "babylonjs"
-    ]
+  "extends": "../tsconfig.base.json",
+  "include": [
+    "src/**/*"
+  ]
 }
